update:update the search engine

--- a/content/posts/ai/machine_learning/《白话机器学习的数学》阅读笔记.md
+++ b/content/posts/ai/machine_learning/《白话机器学习的数学》阅读笔记.md
@@ -2,7 +2,7 @@
 title: "《白话机器学习的数学》阅读笔记"
 date: 2022-02-26T18:18:00+08:00
 draft: false
-tags: ["ai","machine_learning","WIP","note"]
+tags: ["ai","machine_learning","note"]
 categories: ["machine learning"]
 slug: /ai/machine_learning/0
 ---
