update:update the search engine and tags

--- a/content/posts/daily_life/reading/《蛤蟆先生去看心理医生》阅读.md
+++ b/content/posts/daily_life/reading/《蛤蟆先生去看心理医生》阅读.md
@@ -3,7 +3,7 @@ title: "《蛤蟆先生去看心理医生》阅读"
 date: 2022-01-28T16:58:06+08:00
 lastmod: 2022-01-29T01:54:06+08:00
 draft: false
-tags: ["阅读笔记","心理学","日常生活"]
+tags: ["note","心理学","日常生活"]
 categories: ["日常生活"]
 slug: /daily_life/reading/2
 ---
