--- a/content/posts/daily_life/reading/《认知觉醒》阅读.md
+++ b/content/posts/daily_life/reading/《认知觉醒》阅读.md
@@ -2,7 +2,7 @@
 title: "《认知觉醒》阅读"
 date: 2022-01-28T16:58:06+08:00
 draft: false
-tags: ["阅读笔记","心理学","日常生活"]
+tags: ["note","心理学","日常生活"]
 categories: ["日常生活"]
 slug: /daily_life/reading/1
 ---
