update:update the common

--- a/content/posts/common_tech/study_way/思维导图的使用.md
+++ b/content/posts/common_tech/study_way/思维导图的使用.md
@@ -7,6 +7,10 @@ categories: ["通用技术"]
 slug: /common_tech/study_way/0
 ---
 
+> 为了小焦
+> 她真的
+> 我哭死
+
 在讲述如何使用思维导图之前，我们不妨先思考为什么在一开始我们需要思维导图？
 
 带着这一问题，我们首先来简单了解下思维导图的本质。
